DOC-7472 -- landing page column alighnment https://issues.couchbase.com/browse/DOC-7472 Specfically: https://issues.couchbase.com/browse/DOC-7472?focusedCommentId=442826&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-442826 - Change default from 'justified' to standard left-aligned - Provide optional content-j class to retain justfied behavior

--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -221,6 +221,10 @@
 }
 
 .card-row .column .content p {
+  text-align: left;
+}
+
+.card-row .column .content-j p {
   text-align: justify;
 }
 
